--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!-- <h2>Desarrolador Web con grande manejos de Lenguajes de programacion. <br>
                     Diseñador de Webs, Redes Sociales, Banners con <br> experiencia en Imprenta Grafica. 
                 </h2> -->
-                <h2>Hola, soy Marcos Vargas tengo 19 años, estudio en la Facultad de Ciencias Exactas,Fisicas y Naturales, la carrera de "Licensiatura de Sistemas de Informacion", y sigo el curso de PROGRAMACIÓN WEB de soydalto. Soy Programador, Diseñador y Desarrollador Web.</h2>
+                <h2>Hola, soy Marcos Vargas tengo 19 años, estudio en la Facultad de Ciencias Exactas,Fisicas y Naturales, la carrera de "Licensiatura de Sistemas de Informacion",soy programador autodidacta, me gusta aprender nuevas tecnologias. mis fuertes son la programcion FullStack</h2>
                 <div class="botones">
                     <button id="boton1">Contactar</button>
                     <button id="boton2">Saber Mas</button>
